<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TimeStamp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/linearlayoutTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    android:onClick="startChargeTasksActivity"
                    android:contentDescription="@string/ChargeTaskDescription"
                    android:src="@drawable/battery"
                    android:background="@drawable/round_button"/>

                <ImageButton
                    android:id="@+id/imgButton_MaintenanceTasks"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:onClick="startMaintenanceTasksActivity"
                    android:contentDescription="@string/MaintenanceTaskDescription"
                    android:src="@drawable/car_cog"
                    android:background="@drawable/round_button"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayoutBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageButton
                    android:id="@+id/imgButton_SwitchCarLock"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/LockUnlockDesc"
                    android:src="@drawable/lock"
                    android:background="@drawable/round_button"/>

                <ImageButton
                    android:id="@+id/imgButton_SwitchSentryMode"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/SentryModeDesc"
                    android:src="@drawable/shield_car"
                    android:background="@drawable/round_button"/>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.wear.widget.BoxInsetLayout>